[package]
name = "tiny-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
base64 = "0.21"
sha2 = "0.10.9"
strum = "0.23"
strum_macros = "0.23"
serde = { version = "1", features = ["derive"] }
bincode = "2"
anyhow = "1"
chrono = "0.4"
hex = "0.4"
secp256k1 = { version = "0.31", features = ["rand", "std"] }
ripemd = "0.1"
bs58 = "0.5"
rs_merkle = "1.5.0"
num-bigint = "0.4"
num-traits = "0.2"
libp2p = { version = "0.56", features = ["noise", "ping", "tcp", "tokio", "yamux", "gossipsub", "macros", "mdns"] }
libp2p-request-response = "0.29"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }